--- a/LingoLens.css
+++ b/LingoLens.css
@@ -1,21 +1,16 @@
 body{
-    height: 100vh;
-    width: 100vw;
+    height: auto;
+    width: auto;
     overflow-x: hidden;
     background: linear-gradient(135deg, #000000, #1e3a8a);
-    background-size: cover;
+    background-size: auto;
+    background-attachment: fixed;  
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: reverse;
     display: flex;
     flex-direction: row;
 }
-html, body {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden; 
-  }
+
 .nav{
     position:fixed;
     display: flex;
@@ -31,7 +26,7 @@ html, body {
 }
 .section{
     user-select: none;
-    font-size: 30px;
+    font-size: clamp(18px, 4vw, 30px);
     letter-spacing: 3px;
     display: flex;
     justify-content: center;
@@ -43,6 +38,7 @@ html, body {
     border-radius:30px;
 }
 main{
+    margin-bottom: 300px;
     display: flex;
     width: 100%;
     height: 100%;
@@ -52,14 +48,15 @@ main{
 .index {
     user-select: none;
     margin-left: 10px;
-    font-size: 20px;
+    font-size: clamp(18px, 4vw, 30px);
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: rgba(188, 240, 0, 0.267);
     margin-top: 10vh;
     padding: 10px;
-    width: 10%;
+    width: auto;
+    min-width: 10%;
 
 }
 .hiden{
@@ -72,7 +69,7 @@ main{
     display: none;
 }
 .ButtonOpen{
-    font-size: 30px;
+    font-size: clamp(18px, 4vw, 30px);
     letter-spacing: 3px;
     display: flex;
     justify-content: center;
@@ -89,8 +86,7 @@ main{
     flex-wrap: wrap;
     display: flex;
     flex-direction: row;
-    padding-left: 10px;
-    
+    margin-right: 10px;
 }
 
 .modal {
@@ -104,7 +100,7 @@ main{
   .modal-content {
     background: rgba(0, 132, 255, 0.253);
     padding: 20px;
-    width: 25%;
+    width: 20%;
     left: 20%;
     height: 100%;
     display: flex;
@@ -119,8 +115,9 @@ main{
   }
   
   #modal-content p {
-    font-weight: bold;
-    color: chocolate;
+    text-shadow: 12px 12px 2px 1px rgba(0, 0, 255, 0.2);
+
+    color: rgb(255, 255, 255);
     font-size: 20px;
   }
 
@@ -129,13 +126,15 @@ main{
       flex-direction: column;
     }
     .modal-content {
-        background: rgb(0, 132, 255);
+        background: rgba(0, 132, 255, 0.253);
         padding: 20px;
         width: 100%;
         left: 0%;
-        height: 20%;
-        text-align: center;
+        height: auto;
         position: relative;
+      }
+      .modal {
+        height: auto;
       }
     .nav {
       min-height: 100px;
@@ -153,7 +152,6 @@ main{
         border-radius:0;
     }
     main{
-        margin-bottom: 300px;
         margin-left: 0;
         display: flex;
         width: 100%;
