--- a/LingoLens.css
+++ b/LingoLens.css
@@ -1,6 +1,17 @@
+.selected{
+  background-color: rgb(80, 31, 158)!important;
+}
+.activeNav{
+background-color: rgb(80, 31, 158)!important;
+}
+.none{
+display: none!important;
+}
+.active{
+display: flex!important;
+}
+
 body{
-    height: auto;
-    width: auto;
     overflow-x: hidden;
     background: linear-gradient(135deg, #000000, #1e3a8a);
     background-size: auto;
@@ -10,7 +21,6 @@ body{
     display: flex;
     flex-direction: row;
 }
-
 .nav{
     position:fixed;
     display: flex;
@@ -21,73 +31,94 @@ body{
     margin-top: 10vh;
     backdrop-filter: blur(400px);
 }
-.selected{
-    background-color: rgb(80, 31, 158)!important;
-}
 .section{
-    user-select: none;
-    font-size: clamp(18px, 4vw, 30px);
-    letter-spacing: 3px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 10%;
-    border: 2px solid rgba(255, 255, 255, 0.712);
-    background-color: rgba(255, 255, 255, 0.055);
-    border-radius:30px;
-}
-main{
-    margin-bottom: 300px;
-    display: flex;
-    width: 100%;
-    height: 100%;
-    min-width: 550px;
-    margin-left: 20%;
-}
-.index {
-    user-select: none;
-    margin-left: 10px;
-    font-size: clamp(18px, 4vw, 30px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(188, 240, 0, 0.267);
-    margin-top: 10vh;
-    padding: 10px;
-    width: auto;
-    min-width: 10%;
-
-}
-.hiden{
-    opacity: 0;
-}
-.active{
-    background-color: rgb(80, 31, 158)!important;
-}
-.none{
-    display: none;
+  user-select: none;
+  font-size: clamp(18px, 4vw, 30px);
+  letter-spacing: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 10%;
+  border: 2px solid rgba(255, 255, 255, 0.712);
+  background-color: rgba(255, 255, 255, 0.055);
+  border-radius:30px;
 }
 .ButtonOpen{
-    font-size: clamp(18px, 4vw, 30px);
-    letter-spacing: 3px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 10%;
-    border: 2px solid rgba(255, 255, 255, 0.712);
-    background-color: rgb(0, 0, 0);
-    width: 20%;
-    position: fixed;
+  font-size: clamp(18px, 4vw, 30px);
+  letter-spacing: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 10%;
+  border: 2px solid rgba(255, 255, 255, 0.712);
+  background-color: rgb(0, 0, 0);
+  width: 20%;
+  position: fixed;
+}
+
+/* ------------------------------------------------------------------------------------------------------------ */
+.mainParticle{
+  flex-wrap: wrap;
+  margin-bottom: 300px;
+  display: none;
+  width: 100%;
+  height: 100%;
+  min-width: 550px;
+  margin-left: 20%;
+}
+.index {
+  user-select: none;
+  margin-left: 10px;
+  font-size: clamp(18px, 4vw, 30px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(188, 240, 0, 0.267);
+  padding: 10px;
+  width: auto;
+  min-width: 10%;
 }
 .ConteinerIndex{
-    justify-content: end;
-    align-items: center;
-    flex-wrap: wrap;
-    display: flex;
-    flex-direction: row;
-    margin-right: 10px;
+  margin-top: 5%;
+  width: 100%;
+  justify-content: end;
+  align-items: center;
+  flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  margin-right: 10px;
 }
+@media (max-width: 690px) {
+  .mainParticle{
+      margin-left: 0;
+      display: flex;
+      width: 100%;
+      height: 100%;
+      min-width: 550px;
+  }
+  .ConteinerIndex{
+      justify-content: start;
+      
+  }
+  .FirstConIN{
+    margin-top: 30%;
+  }
+}
+/* ------------------------------------------------------------------------------------------------------------ */
+.modal-content {
+  backdrop-filter: blur(100px);
+  background: rgba(0, 132, 255, 0.253);
+  padding: 20px;
+  width: 20%;
+  left: 20%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  position: relative;
+}
+
 
 .modal {
     position: fixed;
@@ -97,30 +128,21 @@ main{
     z-index: 10;
   }
   
-  .modal-content {
-    background: rgba(0, 132, 255, 0.253);
-    padding: 20px;
-    width: 20%;
-    left: 20%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    text-align: center;
-    position: relative;
-  }
-  
-  .none {
-    display: none;
-  }
-  
-  #modal-content p {
+  .modal-line {
     text-shadow: 12px 12px 2px 1px rgba(0, 0, 255, 0.2);
-
     color: rgb(255, 255, 255);
     font-size: 20px;
   }
 
+.line-2 { 
+color: rgb(0, 153, 46);
+}
+.mainParticles{
+  display: none;
+width: 100%;
+height: 100%;
+background-color: aquamarine;
+}
 @media (max-width: 690px) {
     body {
       flex-direction: column;
@@ -155,20 +177,9 @@ main{
         background-color: rgba(255, 255, 255, 0.055);
         border-radius:0;
     }
-    main{
-        margin-left: 0;
-        display: flex;
-        width: 100%;
-        height: 100%;
-        min-width: 550px;
-    }
     .ButtonOpen{
         min-height: 100px;
         bottom: 0;
         width: 100%;
-    }
-    .ConteinerIndex{
-        justify-content: start;
-        
     }
   }
