--- a/LingoLens.css
+++ b/LingoLens.css
@@ -1,14 +1,25 @@
 .selected{
   background-color: rgb(80, 31, 158)!important;
 }
-.activeNav{
-background-color: rgb(80, 31, 158)!important;
-}
 .none{
 display: none!important;
 }
 .active{
 display: flex!important;
+}
+
+.mainHome,
+.mainParticle,
+.mainTimes,
+.mainSettings {
+  display: none;
+}
+
+.mainHome.active,
+.mainParticle.active,
+.mainTimes.active,
+.mainSettings.active {
+  display: flex;
 }
 
 body{
@@ -19,7 +30,7 @@ body{
     background-position: center;
     background-repeat: reverse;
     display: flex;
-    flex-direction: row;
+
 }
 .nav{
     position:fixed;
@@ -56,17 +67,62 @@ body{
   width: 20%;
   position: fixed;
 }
-
-/* ------------------------------------------------------------------------------------------------------------ */
-.mainParticle{
-  flex-wrap: wrap;
+.main{
   margin-bottom: 300px;
   display: none;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   min-width: 550px;
   margin-left: 20%;
 }
+@media (max-width: 690px) {
+  .main{
+      margin-left: 0;
+      width: 100%;
+      height: 100vh;
+      min-width: 550px;
+  }
+  
+}
+/* ------------------------------------------------------------------------------------------------------------ Home*/
+.mainHome{
+  flex-direction: column;
+}
+.Hibox{
+display: flex;
+position: relative;
+width: 40%;
+height: 20%;
+background-color: rgba(255, 255, 255, 0.151);
+border-radius: 10px;
+box-shadow: 10px 5px 5px blue;
+margin: 5%;
+margin-left: auto;
+padding: 10px;
+font-size: clamp(9px, 3vw, 21px);
+color: blue;
+}
+.Hitext{
+
+}
+.News{
+  margin-right: auto;
+}
+@media (max-width: 690px) {
+.Hibox{
+width: 90%;
+top: 5%;
+right: 0%;
+padding: 10px;
+font-size: clamp(9px, 3vw, 21px);
+font-size: 3vh;
+}
+}
+/* ------------------------------------------------------------------------------------------------------------ Particle*/
+  .mainParticle{
+
+    flex-direction: column;
+  }
 .index {
   user-select: none;
   margin-left: 10px;
@@ -84,19 +140,11 @@ body{
   width: 100%;
   justify-content: end;
   align-items: center;
-  flex-wrap: wrap;
   display: flex;
   flex-direction: row;
   margin-right: 10px;
 }
 @media (max-width: 690px) {
-  .mainParticle{
-      margin-left: 0;
-      display: flex;
-      width: 100%;
-      height: 100%;
-      min-width: 550px;
-  }
   .ConteinerIndex{
       justify-content: start;
       
@@ -104,6 +152,51 @@ body{
   .FirstConIN{
     margin-top: 30%;
   }
+}
+/* ------------------------------------------------------------------------------------------------------------ Times*/
+.mainTimes{
+  flex-direction: column;
+}
+.ConteinerIndexTimes{
+  margin: 5%;
+  flex-direction: row;
+   height: 20%;
+  width: 90%;
+  justify-content: end;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  margin-right: 10px;
+}
+.indexTimes{
+  height: 100%;
+  width: 20%;
+  user-select: none;
+  font-size: clamp(18px, 4vw, 30px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(188, 240, 0, 0.267);
+  padding: 10px;
+}
+@media (max-width: 690px) {
+  .indexTimes{
+      justify-content: space-between;
+      width: auto;
+  }
+  .FirstConIN{
+    margin-top: 30%;
+  }
+}
+/* ------------------------------------------------------------------------------------------------------------ Settings*/
+.sorry{
+display: flex;
+justify-content: center;
+align-items: center;
+width: 100%;
+height: 100%;
+color: white;
+font-size: 5vh;
 }
 /* ------------------------------------------------------------------------------------------------------------ */
 .modal-content {
