--- a/LingoLens.css
+++ b/LingoLens.css
@@ -33,8 +33,9 @@ body{
 
 }
 .nav{
+  z-index: 100;
     position:fixed;
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: space-evenly;
     height: 90%;
@@ -203,8 +204,8 @@ font-size: 5vh;
   backdrop-filter: blur(100px);
   background: rgba(0, 132, 255, 0.253);
   padding: 20px;
-  width: 20%;
-  left: 20%;
+  width: 100%;
+  left: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -215,7 +216,7 @@ font-size: 5vh;
 
 .modal {
     position: fixed;
-    width: 100%;
+    width: 20%;
     height: 100%;
     display: flex;
     z-index: 10;
@@ -228,7 +229,7 @@ font-size: 5vh;
   }
 
 .line-2 { 
-color: rgb(0, 153, 46);
+
 }
 .mainParticles{
   display: none;
@@ -249,6 +250,7 @@ background-color: aquamarine;
         position: relative;
       }
       .modal {
+        width: 100%;
         height: auto;
       }
       .hiden{
