--- a/LingoLens.css
+++ b/LingoLens.css
@@ -21,7 +21,10 @@ display: flex!important;
 .mainSettings.active {
   display: flex;
 }
-
+.secured.locked {
+  filter: brightness(0.7);
+  transform: scale(0.95);
+}
 body{
     overflow-x: hidden;
     background: linear-gradient(135deg, #000000, #1e3a8a);
@@ -55,6 +58,7 @@ body{
   border: 2px solid rgba(255, 255, 255, 0.712);
   background-color: rgba(255, 255, 255, 0.055);
   border-radius:30px;
+  overflow: hidden;
 }
 .ButtonOpen{
   font-size: clamp(18px, 4vw, 30px);
